--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "webpack-dev-server --devtool inline-source-map --hot --config webpack.client.config.js"
+    "client": "webpack-dev-server --devtool inline-source-map --hot --config webpack.client.config.js",
+    "client:build": "webpack --config webpack.client.build.config.js"
   },
   "repository": {
     "type": "git",
