--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "client": "webpack-dev-server --devtool inline-source-map --hot --config webpack.client.config.js",
     "client:build": "webpack --config webpack.client.build.config.js",
     "stats": "webpack --profile --json --config webpack.client.build.config.js > stats.json",
-    "analyze": "webpack-bundle-analyzer stats.json"
+    "analyze": "webpack-bundle-analyzer stats.json",
+    "server": "nodemon --exec babel-node --watch src/server src/server/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,12 +22,21 @@
   },
   "homepage": "https://github.com/ryanmercadante/graphbook#readme",
   "dependencies": {
+    "apollo-server-express": "^2.4.8",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "graphql": "^14.1.1",
+    "graphql-tools": "^4.0.4",
+    "helmet": "^3.16.0",
+    "nodemon": "^1.18.10",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
