--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "graphql": "^14.1.1",
     "graphql-tools": "^4.0.4",
     "helmet": "^3.16.0",
+    "mysql2": "^1.6.5",
     "nodemon": "^1.18.10",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "sequelize": "^5.1.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
