--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client:build": "webpack --config webpack.client.build.config.js",
     "stats": "webpack --profile --json --config webpack.client.build.config.js > stats.json",
     "analyze": "webpack-bundle-analyzer stats.json",
-    "server": "nodemon --exec babel-node --watch src/server src/server/index.js"
+    "server": "nodemon --exec babel-node --plugins require-context-hook --watch src/server src/server/index.js"
   },
   "repository": {
     "type": "git",
@@ -50,6 +50,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "eslint": "^5.3.0",
